--- a/package.json
+++ b/package.json
@@ -1,16 +1,30 @@
 {
-    "name": "backend-server",
-    "version": "1.0.0",
-    "description": "Servidor backend del curso Angular  Avanzado",
-    "main": "index.js",
-    "scripts": {
-        "start": "nodemon app.js",
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Ignacio Guelbenzu",
-    "license": "ISC",
-    "dependencies": {
-        "express": "^4.16.4",
-        "mongoose": "^5.4.19"
-    }
+  "name": "backend-server",
+  "version": "1.0.0",
+  "description": "Servidor backend del curso Angular  Avanzado",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Ignacio Guelbenzu",
+  "license": "ISC",
+  "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.7.4",
+    "mongoose-unique-validator": "^2.0.3",
+    "nodemon": "^1.19.3"
+  },
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ijguelbenzu/backend-server-curso.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ijguelbenzu/backend-server-curso/issues"
+  },
+  "homepage": "https://github.com/ijguelbenzu/backend-server-curso#readme"
 }
