--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
+    "express-fileupload": "^1.1.6-alpha.5",
+    "express-upload": "^0.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "mongoose-unique-validator": "^2.0.3",
-    "nodemon": "^1.19.3"
+    "nodemon": "^1.19.3",
+    "serve-index": "^1.9.1"
   },
   "devDependencies": {},
   "repository": {
