--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "express-fileupload": "^1.1.6-alpha.5",
     "express-upload": "^0.1.0",
+    "google-auth-library": "^5.5.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.4",
     "mongoose-unique-validator": "^2.0.3",
